--- a/index.html
+++ b/index.html
@@ -42,12 +42,18 @@
 
 <body>
     <nav>
-        <button>Home</button>
+        <button name="btnHome" type="button" class="leftnavbtn">Home</button>
+        <button name="btnPlants" type="button" class="leftnavbtn">Plants</button>
+        <button name="btnAbout" type="button" class="rightnavbtn">About</button>
+        <button name="btnAbout" type="button" class="rightnavbtn">Contact</button>
     </nav>
 
     <main>
-        <section class="section1 container-fluid">
+        <section class="section1">
             <img src="img/protosample/bg.jpg" alt="Tree" />
+        </section>
+        <section>
+
         </section>
     </main>
 </body>
