redirect to id intro

--- a/index.html
+++ b/index.html
@@ -40,13 +40,14 @@
     <link rel="stylesheet" href="css/style.css" />
 
     <!-- Scripts -->
-    <!-- <script>$(document).ready(function () {
+    <script>
+        $(document).ready(function () {
             // Handler for .ready() called.
             $('html, body').animate({
                 scrollTop: $('#intro').offset().top
             }, 'slow');
         });
-    </script> -->
+    </script>
 </head>
 
 <body>
