--- a/index.html
+++ b/index.html
@@ -65,30 +65,31 @@
         </button>
         <button name="btnHome" type="button" class="leftnavbtn">Home</button>
         <button name="btnPlants" type="button" class="leftnavbtn">Plants</button>
+        <button name="btnPlants" type="button" class="leftnavbtn">Learn</button>
         <!-- <img src="img/protosample/favicon.png" alt="test" class="logo"></img> -->
         <button name="btnAbout" type="button" class="rightnavbtn">About</button>
     </nav>
 
     <main id="main">
         <section class="section1 intro" id="intro">
-            <h1>Lorem ipsum</h1>
+            <h1>Make Crops</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </section>
         <section class="section2 details" id="details">
             <div class="row">
                 <div class="column">
-                    <img src="img/protosample/favicon.png" alt="test" class="logo"></img>
-                    <h1>Lorem ipsum</h1>
+                    <img src="img/protosample/PlantIcon.png" alt="test" class="logo"></img>
+                    <h1>Plant</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
                 <div class="column">
-                    <img src="img/protosample/favicon.png" alt="test" class="logo"></img>
-                    <h1>Lorem ipsum</h1>
+                    <img src="img/protosample/LearnIcon.png" alt="test" class="logo"></img>
+                    <h1>Learn</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
                 <div class="column">
-                    <img src="img/protosample/favicon.png" alt="test" class="logo"></img>
-                    <h1>Lorem ipsum</h1>
+                    <img src="img/protosample/AboutIcon.png" alt="test" class="logo"></img>
+                    <h1>About</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
             </div>
