--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="row">
                 <div class="column">
                     <img src="img/protosample/PlantIcon.png" alt="test" class="logo"></img>
-                    <h1>Plant</h1>
+                    <h1>Plants</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
                 <div class="column">
