added section and tempo applied remedy to the nav

--- a/index.html
+++ b/index.html
@@ -55,12 +55,13 @@
         <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeSideNav()">&times;</a> -->
         <a href="#intro">Intro</a>
         <a href="#details">Details</a>
-        <a href="#">Progress</a>
+        <a href="#progress">Progress</a>
         <a href="#">Footer</a>
     </div>
 
     <nav id="nav">
-        <button name="btnSidebar" type="button" class="leftnavbtn burgericon" value="open" id="sidebario" onclick="onoff()">
+        <button name="btnSidebar" type="button" class="leftnavbtn burgericon" value="open" id="sidebario"
+            onclick="onoff()">
             &#9776;
         </button>
         <button name="btnHome" type="button" class="leftnavbtn">Home</button>
@@ -77,22 +78,34 @@
         </section>
         <section class="section2 details" id="details">
             <div class="row">
-                <div class="column">
-                    <img src="img/protosample/PlantIcon.png" alt="test" class="logo"></img>
+                <div class="threecolumn">
+                    <img src="img/protosample/PlantIcon.png" alt="Plants" class="logo"></img>
                     <h1>Plants</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
-                <div class="column">
-                    <img src="img/protosample/LearnIcon.png" alt="test" class="logo"></img>
+                <div class="threecolumn">
+                    <img src="img/protosample/LearnIcon.png" alt="Learn" class="logo"></img>
                     <h1>Learn</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
-                <div class="column">
-                    <img src="img/protosample/AboutIcon.png" alt="test" class="logo"></img>
+                <div class="threecolumn">
+                    <img src="img/protosample/AboutIcon.png" alt="About" class="logo"></img>
                     <h1>About</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
             </div>
+        </section>
+        <section class="section3 progress" id="progress">
+            <div class="row">
+                <div class="bicolumn">
+                    <h1>Our Project</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="bicolumn">
+                    <img src="img/protosample/favicon.png" alt="test" class="logo" style="filter: invert(1);"></img>
+                </div>
+            </div>
+
         </section>
     </main>
 
