--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
                 <div class="bicolumn">
-                    <img src="img/protosample/favicon.png" alt="test" class="logo" style="filter: invert(1);"></img>
+                    <img src="img/protosample/favicon.png" alt="test" class="logo"></img>
                 </div>
             </div>
 
