minor changes, reduced code

--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
 
     <!-- Scripts -->
 
-
     <!-- Start at id="intro" -->
     <script>
         $(document).ready(function () {
@@ -131,6 +130,9 @@
             </div>
         </footer>
     </main>
+
+    <!-- Top Button -->
+
     <div class="topbtn">
         <button id="returnTop"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-compact-up"
                 fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -139,52 +141,15 @@
             </svg>
         </button>
     </div>
-    <script>
-        function openSideNav() {
-            document.getElementById("contentSidebar").style.width = "250px";
-            document.getElementById("nav").style.marginLeft = "250px";
-            document.getElementById("main").style.marginLeft = "250px";
-        }
 
-        function closeSideNav() {
-            document.getElementById("contentSidebar").style.width = "0";
-            document.getElementById("nav").style.marginLeft = "0";
-            document.getElementById("main").style.marginLeft = "0";
-        }
+    <!-- Scripts -->
 
-        function onoff() {
-            currentvalue = document.getElementById('sidebario').value;
-            if (currentvalue == "open") {
-                document.getElementById("sidebario").value = "close";
-                openSideNav();
-            } else {
-                document.getElementById("sidebario").value = "open";
-                closeSideNav();
-            }
-        }
-    </script>
-    <script>
-        window.onscroll = function () {
-            scrollFunction();
-        }
+    <!-- Side Navigator script -->
+    <script src="js/sidenav.js"></script>
 
-        function scrollFunction() {
-            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-                document.getElementById("returnTop").style.display = "block";
-                $("#returnTop").fadeIn(1000);
-            } else {
-                document.getElementById("returnTop").style.display = "none";
-                $("#returnTop").fadeOut(1000);
-            }
-        }
-
-        // When the user clicks on the button, scroll to the top of the document
-        $("#returnTop").click(function () {
-            $('html, body').animate({
-                scrollTop: $("#intro").offset().top
-            });
-        });
-    </script>
+    <!-- Top button script -->
+    <script src="js/topReturn.js"></script>
+    
 </body>
 
 </html>
