--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 
         Project in TLE, Computer and Statistics
 
-        Developed by TheBlu */-->
+        Developed by TheBlu
+        
+        Make Crops template by LordGumball20 is licensed
+        under a Creative Commons Attribution-ShareAlike 4.0 International License   */-->
 
 <!DOCTYPE html>
 <html lang="en-gb">
@@ -38,7 +41,7 @@
     <title>Make Crops</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="img/protosample/favicon.png" />
+    <link rel="icon" href="img/protosample/PlantIcon.png" />
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css" />
@@ -117,16 +120,40 @@
         </section>
         <footer id="footer">
             <div class="row">
-                <div class="threecolumn">
-                    <h3>Links</h3>
-                    <a href="index.html">Home</a><br>
-                    <a href="plants.html">Plants</a><br>
-                    <a href="learn.html">Learn</a><br>
-                    <a href="about.html">About us</a><br>
+                <div class="threecolumn footerColumnDivider">
+                    <div class="socialLinks">
+                        <h3>Find us on</h3>
+                        <a href="https://github.com/makecrops"><img
+                                src="img/btn/social_media/GitHub-Mark/PNG/GitHub-Mark-Light-120px-plus.png"
+                                alt="Make Crops Github Page"></a>
+                        <a href="https://github.com/lordgumball20"><img src="img/btn/social_media/Lordgumball20.png"
+                                alt="LordGumball's Github Profile"></a>
+                    </div>
+                    <hr class="dashed">
+                    <div class="footerLinks">
+                        <h3>Links</h3>
+                        <hr>
+                        <a href="index.html">Home</a>
+                        <a href="plants.html">Plants</a>
+                        <a href="learn.html">Learn</a>
+                        <a href="about.html">About us</a>
+                    </div>
                 </div>
-            </div>
-            <div class="copyright">
-                <!-- <p>2020 (c) IMG</p> -->
+                <div class="threecolumn footerColumnDivider">
+
+                </div>
+                <div class="threecolumn footerColumnDivider">
+                    <img src="img/protosample/PlantIcon.png" style="filter: invert(1);">
+                    <h1>Make Crops</h1>
+                    <h4>2020 © Make Crops Co.</h4>
+                    <hr>
+                    <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img
+                            alt="Creative Commons License" style="border-width:0"
+                            src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />Make Crops template by
+                    LordGumball20 is licensed
+                    under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons
+                        Attribution-ShareAlike 4.0 International License</a>.
+                </div>
             </div>
         </footer>
     </main>
@@ -149,7 +176,7 @@
 
     <!-- Top button script -->
     <script src="js/topReturn.js"></script>
-    
+
 </body>
 
 </html>
