--- a/plants.html
+++ b/plants.html
@@ -1,6 +1,6 @@
 <!--/*  makecrops.github.io
 
-        Home Page
+        Plants Page
 
         Project in TLE, Computer and Statistics
 
@@ -40,7 +40,7 @@
 
 
     <!-- Title -->
-    <title>Home | Make Crops</title>
+    <title>Plants | Make Crops</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/protosample/assets/PlantIcon.png" />
@@ -50,7 +50,7 @@
     <link rel="stylesheet" href="css/nav.css" />
     <link rel="stylesheet" href="css/sidebar.css" />
     <link rel="stylesheet" href="css/returnTop.css" />
-    <link rel="stylesheet" href="css/home.css" />
+    <link rel="stylesheet" href="css/plants.css" />
 
 
 
@@ -72,8 +72,8 @@
         <h1>Navigator</h1>
         <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeSideNav()">&times;</a> -->
         <a href="#intro">Intro</a>
-        <a href="#details">Details</a>
-        <a href="#progress">Progress</a>
+        <a href="#aboutPlants">About</a>
+        <a href="#plantProgress">Progress</a>
         <a href="#footer">Footer</a>
     </div>
 
@@ -102,39 +102,46 @@
 
     <main id="main">
         <section class="section1 intro" id="intro">
-            <h1>Make Crops</h1>
+            <h1>Plants</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </section>
-        <section class="section2 details" id="details">
-            <div class="row">
-                <div class="threecolumn">
-                    <img src="img/protosample/assets/PlantIcon.png" alt="Plants" class="logo"></img>
-                    <h1>Plants</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </div>
-                <div class="threecolumn">
-                    <img src="img/protosample/assets/LearnIcon.png" alt="Learn" class=""></img>
-                    <h1>Learn</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </div>
-                <div class="threecolumn">
-                    <img src="img/protosample/assets/AboutIcon.png" alt="About" class=""></img>
-                    <h1>About</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </div>
-            </div>
+        <section class="section2 aboutPlants" id="aboutPlants">
+            <a href="#aboutPlants">
+                <h1>About our project</h1>
+            </a>
+            <hr>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum.</p>
         </section>
-        <section class="section3 progress" id="progress">
-            <div class="row">
-                <div class="bicolumn">
-                    <h1>Our Project</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </div>
-                <div class="bicolumn">
-                    <img src="img/protosample/favicon.png" alt="test" class="logo"></img>
+        <section class="section3 plantProgress" id="plantProgress">
+            <a href="#plantProgress">
+                <h1>Plant Progress</h1>
+            </a>
+            <hr>
+            <div class="plantContent">
+                <div class="plantBox">
+                    <div class="row plantRow">
+                        <div class="unequalcolumn unequalcolumnleft">
+                            <div class="plantColumnStyle">
+                                <div class="plantImg">
+                                    <img src="img/protosample/assets/ProfilePic.png" class="logo"></img>
+                                </div>
+                                <div class="plantTxT">
+                                    <h3>Lorem ipsum</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="unequalcolumn unequalcolumnright">
+                            <div class="plantColumnStyle">
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-
         </section>
     </main>
     <footer id="footer">
