--- a/learn.html
+++ b/learn.html
@@ -1,6 +1,6 @@
 <!--/*  makecrops.github.io
 
-        Plants Page
+        Learn Page
 
         Project in TLE, Computer and Statistics
 
@@ -51,7 +51,7 @@
     <link rel="stylesheet" href="css/nav.css" />
     <link rel="stylesheet" href="css/sidebar.css" />
     <link rel="stylesheet" href="css/returnTop.css" />
-    <link rel="stylesheet" href="css/plants.css" />
+    <link rel="stylesheet" href="css/learn.css" />
     <link rel="stylesheet" href="css/footer.css" />
 
 
@@ -74,8 +74,7 @@
         <h1>Navigator</h1>
         <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeSideNav()">&times;</a> -->
         <a href="#intro">Intro</a>
-        <a href="#aboutPlants">About</a>
-        <a href="#plantProgress">Progress</a>
+        <a href="#aboutTools">Tools</a>
         <a href="#footer">Footer</a>
     </div>
 
@@ -83,17 +82,18 @@
         <div class="mainNav" id="mainNav">
             <div class="row">
                 <div class="bicolumn">
-                    <button name="btnSidebar" type="button" class="leftbtn burgericon navbtn" value="open" id="sidebario"
-                        onclick="onoff()">
+                    <button name="btnSidebar" type="button" class="leftbtn burgericon navbtn" value="open"
+                        id="sidebario" onclick="onoff()">
                         &#9776;
                     </button>
                 </div>
                 <div class="bicolumn">
-                    <button name="btnHideNav" type="button" class="rightbtn navbtn" id="hideNav" onclick="hidemainNav()"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-compact-up"
-                        fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd"
-                            d="M7.776 5.553a.5.5 0 0 1 .448 0l6 3a.5.5 0 1 1-.448.894L8 6.56 2.224 9.447a.5.5 0 1 1-.448-.894l6-3z" />
-                    </svg></button>
+                    <button name="btnHideNav" type="button" class="rightbtn navbtn" id="hideNav"
+                        onclick="hidemainNav()"><svg width="1em" height="1em" viewBox="0 0 16 16"
+                            class="bi bi-chevron-compact-up" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd"
+                                d="M7.776 5.553a.5.5 0 0 1 .448 0l6 3a.5.5 0 1 1-.448.894L8 6.56 2.224 9.447a.5.5 0 1 1-.448-.894l6-3z" />
+                        </svg></button>
                     <button name="btnAbout" type="button" class="rightbtn navbtn"
                         onclick="window.location.href='about.html';">About</button>
                     <button name="btnPlants" type="button" class="rightbtn navbtn"
@@ -106,20 +106,23 @@
             </div>
         </div>
         <div class="shownav" id="shownav">
-            <button name="btnShowNav" type="button" class="rightbtn showbtn" id="showNav" onclick="showmainNav()"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-down" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
-            </svg></button>
+            <button name="btnShowNav" type="button" class="rightbtn showbtn" id="showNav" onclick="showmainNav()"><svg
+                    width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-down" fill="currentColor"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                        d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
+                </svg></button>
         </div>
     </nav>
 
     <main id="main">
         <section class="section1 intro" id="intro">
-            <h1>Plants</h1>
+            <h1>Learn</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </section>
-        <section class="section2 aboutPlants" id="aboutPlants">
-            <a href="#aboutPlants">
-                <h1>About our project</h1>
+        <section class="section2 aboutTools" id="aboutTools">
+            <a href="#aboutTools">
+                <h1>Agricultural Tools</h1>
             </a>
             <hr>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -128,29 +131,31 @@
                 fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
                 deserunt mollit anim id est laborum.</p>
         </section>
-        <section class="section3 plantProgress" id="plantProgress">
-            <a href="#plantProgress">
-                <h1>Plant Progress</h1>
-            </a>
+        <section class="section3 toolsContainer" id="toolsContainer">
+            <div class="aboutSickle">
+                <div class="row">
+                    <div class="unequalcolumn unequalcolumnleft">
+                        <img src="img/protosample/favicon.png" alt="test" class="logo"></img>
+                    </div>
+                    <div class="unequalcolumn unequalcolumnright">
+                        <a href="#toolSickle">
+                            <h1>Sickle</h1>
+                        </a>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                </div>
+            </div>
             <hr>
-            <div class="plantContent">
-                <div class="plantBox">
-                    <div class="row plantRow">
-                        <div class="unequalcolumn unequalcolumnleft">
-                            <div class="plantColumnStyle">
-                                <div class="plantImg">
-                                    <img src="img/protosample/assets/ProfilePic.png" class="logo"></img>
-                                </div>
-                                <div class="plantTxT">
-                                    <h3>Lorem ipsum</h3>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="unequalcolumn unequalcolumnright">
-                            <div class="plantColumnStyle">
-
-                            </div>
-                        </div>
+            <div class="aboutPick">
+                <div class="row">
+                    <div class="unequalcolumn unequalcolumnleft">
+                        <img src="img/protosample/favicon.png" alt="test" class="logo"></img>
+                    </div>
+                    <div class="unequalcolumn unequalcolumnright">
+                        <a href="#toolPick">
+                            <h1>Pickaxe</h1>
+                        </a>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     </div>
                 </div>
             </div>
@@ -165,8 +170,7 @@
                             src="img/btn/social_media/GitHub-Mark/PNG/GitHub-Mark-Light-120px-plus.png"
                             alt="Make Crops Github Page"></a>
                     <a href="https://github.com/makecrops/makecrops.github.io"><img
-                            src="img/btn/social_media/makecrops.png"
-                            alt="makecrops.github.io Github repository"></a>
+                            src="img/btn/social_media/makecrops.png" alt="makecrops.github.io Github repository"></a>
                     <a href="https://github.com/lordgumball20"><img src="img/btn/social_media/lordgumball20.png"
                             alt="LordGumball's Github Profile"></a>
                 </div>
