title of learn yeet

--- a/learn.html
+++ b/learn.html
@@ -40,7 +40,7 @@
 
 
     <!-- Title -->
-    <title>Plants | Make Crops</title>
+    <title>Learn | Make Crops</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/protosample/assets/PlantIcon.png" />
